--- a/app/views/shared/_card_lending.html.erb
+++ b/app/views/shared/_card_lending.html.erb
@@ -3,9 +3,11 @@
   <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %></div>
   <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
   <div class="loan-card-item-info">
-    <p><%= "👤 Lent to #{loan.user.first_name} - #{rating(loan)}" %></p>
+    <p><%= "👤 Lent to #{loan.user.first_name}"%></p>
+    <p><%= "#{rating(loan)}" %></p>
     <p><%="🎯 #{loan.return_date}" %></p>
-    <p><%= "📝 #{loan.item.description}" %></p>
+    <p>📝</p>
+    <p class='quote'><%="\"#{loan.item.description}\"" %></p>
   </div>
 
   <div class="loan-card-item-info-actions d-flex justify-content-between p-5" >
