--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -19,19 +19,20 @@
     text-decoration: none;
   }
   .loans-per-user{
-
-
     .user-card{
       margin: 20px;
       width: 300px;
       height: 300px;
-      border-radius: 5px;
-      // display: flex;
+      border-radius: 10px;
+      border: 5px white solid;
+      p {
+        color: white;
+      }
       .lent{
         padding: 40px 150px 0 0;
         p{
           color: white;
-          background-color: rgba(255,93,143,0.5);
+          background-color: $borrowing;
           border-radius: 0 50px 50px 0;
           font-size: 20px
         }
@@ -40,7 +41,7 @@
         padding: 0 150px 0 0;
         p{
           color: white;
-          background-color: rgba(219,231,228,0.5);
+          background-color: $lending;
           border-radius: 0 50px 50px 0;
           font-size: 20px
         }
