--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -30,3 +30,10 @@ h2 {
 p {
   font-family: 'Oswald', sans-serif!important;
 }
+
+.quote {
+  font-family: 'Cormorant Garamond', serif;
+  font-weight: 100;
+  font-size: 16px;
+  font-style: italic;
+}
