should be working

--- a/app/views/shared/_card_lending.html.erb
+++ b/app/views/shared/_card_lending.html.erb
@@ -16,8 +16,8 @@
     </button>
     <div id="myModal" class="modal" data-modal-target="review">
       <div class="modal-content">
-        <span class="close">&times;</span>
-        <%= render '/shared/new_review_lender', loan: loan %>
+        <span class="close" data-action='click->modal#close'>&times;</span>
+        <%= render '/shared/new_review', loan: loan %>
       </div>
     </div>
     <%= link_to user_path(loan.user), class: 'return-btn' do %>
