--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -97,7 +97,7 @@
     <ul style="list-style-type: none">
       <% if @user.reviews.present? %>
         <%  @user.reviews.each do |review| %>
-          <li>"<%= review.comment %>" from <%= review.loan.item.user.first_name %></li>
+          <li>"<%= review.comment %>" from <%= review.loan.user.first_name %></li>
         <% end %>
       <% else %>
         <li>The user has no reviews...</li>
