--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -6,7 +6,6 @@
   width: 100%;
   height: 100%;
   margin: 20px 20px 20px;
-  // padding: 100px;
 
   .card-odd-lending{
     display: block;
@@ -15,8 +14,12 @@
     margin:120px 0 20px;
     border-radius: 10px;
     position: relative;
+    box-shadow: 5px 5px 14px -3px rgba(0,0,0,0.66);
+
     .card-lending{
+      border-radius: 10px;
       background-color: $lending;
+      height: inherit;
       .loan-card-image{
         height: 330px;
         border-radius: 5px;
@@ -48,7 +51,7 @@
         top: 0;
         right: 0;
         width: 360px ;
-        height: 620px ;
+        height: inherit;
         align-items: flex-start;
         opacity: 0%;
         font-size: 28px;
@@ -68,8 +71,12 @@
     margin:20px 0 20px;
     border-radius: 10px;
     position: relative;
+    box-shadow: 5px 5px 14px -3px rgba(0,0,0,0.66);
+
     .card-lending{
+      border-radius: 10px;
       background-color: $lending;
+      height: inherit;
       .loan-card-image{
         height: 330px;
         border-radius: 5px;
@@ -101,7 +108,7 @@
       top: 0;
       right: 0;
       width: 360px;
-      height: 620px;
+      height: inherit;
       align-items: flex-start;
       opacity: 0%;
       font-size: 28px;
@@ -121,8 +128,12 @@
     margin:120px 0 20px;
     border-radius: 10px;
     position: relative;
+    box-shadow: 5px 5px 14px -3px rgba(0,0,0,0.66);
+
     .card-borrowing{
+      border-radius: 10px;
       background-color: $borrowing;
+      height: inherit!important;
       .loan-card-image{
         height: 330px;
         border-radius: 5px;
@@ -140,8 +151,6 @@
       .loan-card-item-info{
         color: black;
         font-size: 28px;
-        // text-align: left;
-        // padding-left: 20px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -156,7 +165,7 @@
         top: 0;
         right: 0;
         width: 360px;
-        height: 620px;
+        height: inherit;
         align-items: flex-start;
         opacity: 0%;
         font-size: 28px;
@@ -175,8 +184,11 @@
     margin:20px 0 20px;
     border-radius: 10px;
     position: relative;
+    box-shadow: 5px 5px 14px -3px rgba(0,0,0,0.66);
     .card-borrowing{
+      border-radius: 10px;
       background-color: $borrowing;
+      height: inherit!important;
       .loan-card-image{
         height: 330px;
         border-radius: 5px;
@@ -208,7 +220,7 @@
         top: 0;
         right: 0;
         width: 360px;
-        height: 620px;
+        height: inherit;
         align-items: flex-start;
         opacity: 0%;
         font-size: 28px;
