--- a/app/views/chatrooms/_show.html.erb
+++ b/app/views/chatrooms/_show.html.erb
@@ -3,7 +3,7 @@
 
   <p class="mt-6"> 💌 Chat with <%= user.first_name%></p>
 
-  <%= simple_form_for [@chatroom, message],
+  <%= simple_form_for [chatroom, message],
    remote: true,
   html: {data: {chatroom_subscription_target: "form"}, class: "d-flex"} do |f|
   %>
