--- a/app/views/shared/_index_loans.html.erb
+++ b/app/views/shared/_index_loans.html.erb
@@ -1,5 +1,5 @@
 <div class="dashboard-container">
-  <div class="loan-index" data-controller='modal'>
+  <div class="loan-index">
     <% lendings = user_lendings(current_user) %>
     <% count = 0 %>
     <% lendings.each do |loan| %>
