--- a/app/assets/stylesheets/components/_card_loan.scss
+++ b/app/assets/stylesheets/components/_card_loan.scss
@@ -188,7 +188,7 @@
     .card-borrowing{
       border-radius: 10px;
       background-color: $borrowing;
-      height: inherit!important;
+      height: inherit;
       .loan-card-image{
         height: 330px;
         border-radius: 5px;
