--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class= "user-show-container">
   <h1>Your historic with <%= @user.first_name %> <%= @user.last_name %> </h1>
   <div class="loan-index" data-controller='modal'>
-    <% lendings = user_lendings(@user) %>
+    <% lendings = user_borrowings(@user) %>
     <% lendings.each do |loan| %>
       <% count = 0 %>
       <% unless loan.status == 'returned' %>
@@ -25,7 +25,7 @@
           <% end %>
         <% end %>
     <% end %>
-    <% borrowings = user_borrowings(@user) %>
+    <% borrowings = user_lendings(@user) %>
     <% borrowings.each do |loan| %>
       <% count =0 %>
       <% unless loan.status == 'returned' %>
