--- a/app/views/shared/_card_lending.html.erb
+++ b/app/views/shared/_card_lending.html.erb
@@ -1,4 +1,4 @@
-<div class="card-lending" data-modal-target="loan" data-id="<%= loan.id %>">
+<div class="card-lending" data-controller='modal' data-modal-target="loan" data-id="<%= loan.id %>">
 
   <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %></div>
   <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
