--- a/app/views/shared/_card_borrowing.html.erb
+++ b/app/views/shared/_card_borrowing.html.erb
@@ -21,7 +21,7 @@
         <%= render 'shared/new_review', loan: loan %>
       </div>
     </div>
-    <%= link_to user_path(loan.user), class: 'return-btn' do %>
+    <%= link_to user_path(loan.item.user), class: 'return-btn' do %>
       <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-chat-right-heart" viewBox="0 0 16 16">
         <path d="M2 1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h9.586a2 2 0 0 1 1.414.586l2 2V2a1 1 0 0 0-1-1H2Zm12-1a2 2 0 0 1 2 2v12.793a.5.5 0 0 1-.854.353l-2.853-2.853a1 1 0 0 0-.707-.293H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12Z"/>
         <path d="M8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
