--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -75,6 +75,7 @@ html {
 
     .odd-number{
       text-align: left;
+      margin-bottom: 16px;
     }
     .odd-text{
       text-align: right;
@@ -86,5 +87,18 @@ html {
       width: 750px;
     }
 
+  }
+}
+
+#friends {
+  background: linear-gradient(13deg, rgba(82,182,154,0.7) 50%, rgba(255,255,255,1) 50%);
+}
+
+#map {
+  background: rgb(255,255,255);
+  background: linear-gradient(128deg, rgba(255,255,255,1) 0%, rgba(236,236,236,1) 100%);
+  p {
+    color: black!important;
+    padding: 20px;
   }
 }
