--- a/app/views/shared/_introduction.html.erb
+++ b/app/views/shared/_introduction.html.erb
@@ -1,4 +1,4 @@
-<div class="introduction">
+<div class="introduction mb-3">
   <div class="introduction-step-1">
     <div class="odd-number"><h1>01.</h1></div>
     <div class="odd-text">
