--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -55,7 +55,11 @@
     <ul style="list-style-type: none">
       <% if @user.reviews.present? %>
         <%  @user.reviews.each do |review| %>
-          <li>"<%= review.comment %>" from <%= review.loan.user.first_name %></li>
+          <% if review.user == review.loan.user %>
+            <li>"<%= review.comment %>" from <%= review.loan.item.user.first_name %></li>
+          <% else %>
+            <li>"<%= review.comment %>" from <%= review.loan.user.first_name %></li>
+          <% end %>
         <% end %>
       <% end %>
     </ul>
