issue fixed on show

--- a/app/views/shared/_card_lending.html.erb
+++ b/app/views/shared/_card_lending.html.erb
@@ -1,47 +1,49 @@
-<div class="card-lending" data-controller='modal' data-modal-target="loan" data-id="<%= loan.id %>">
+  <div class="card-lending">
 
-  <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %></div>
-  <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
-  <div class="loan-card-item-info">
-    <p><%= "👤 Lent to #{loan.user.first_name}"%></p>
-    <p><%= "#{rating(loan)}" %></p>
-    <p><%="🎯 #{loan.return_date}" %></p>
-    <p>📝</p>
-    <p class='quote'><%="\"#{loan.item.description}\"" %></p>
-  </div>
-
-  <div class="loan-card-item-info-actions d-flex justify-content-between p-5" >
-    <button class="review-btn" title="Give a review" data-action='click->modal#launchReview'>
-    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star" viewBox="0 0 16 16">
-      <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
-    </svg>
-    </button>
-    <div id="myModal" class="modal" data-modal-target="review">
-      <div class="modal-content">
-        <span class="close" data-action='click->modal#close'>&times;</span>
-        <%= render '/shared/new_review', loan: loan %>
-      </div>
+    <div class="loan-card-image"><%= cl_image_tag (loan.item.photo.key) %></div>
+    <p style="color: white; font-size: 40px;"><%= loan.item.item_name %></p>
+    <div class="loan-card-item-info">
+      <p><%= "👤 Lent to #{loan.user.first_name}"%></p>
+      <p><%= "#{rating(loan)}" %></p>
+      <p><%="🎯 #{loan.return_date}" %></p>
+      <p>📝</p>
+      <p class='quote'><%="\"#{loan.item.description}\"" %></p>
     </div>
-    <%= link_to user_path(loan.user), class: 'return-btn' do %>
-      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-chat-right-heart" viewBox="0 0 16 16">
-        <path d="M2 1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h9.586a2 2 0 0 1 1.414.586l2 2V2a1 1 0 0 0-1-1H2Zm12-1a2 2 0 0 1 2 2v12.793a.5.5 0 0 1-.854.353l-2.853-2.853a1 1 0 0 0-.707-.293H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12Z"/>
-        <path d="M8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
-      </svg>
-    <% end %>
-    <% if loan.status == 'pending' %>
-      <button title="Accept loan" class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
-      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-question-diamond" viewBox="0 0 16 16">
-        <path d="M6.95.435c.58-.58 1.52-.58 2.1 0l6.515 6.516c.58.58.58 1.519 0 2.098L9.05 15.565c-.58.58-1.519.58-2.098 0L.435 9.05a1.482 1.482 0 0 1 0-2.098L6.95.435zm1.4.7a.495.495 0 0 0-.7 0L1.134 7.65a.495.495 0 0 0 0 .7l6.516 6.516a.495.495 0 0 0 .7 0l6.516-6.516a.495.495 0 0 0 0-.7L8.35 1.134z"/>
-        <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
+
+    <div class="loan-card-item-info-actions d-flex justify-content-between p-5" >
+      <button class="review-btn" title="Give a review" data-action='click->modal#launchReview'>
+      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-star" viewBox="0 0 16 16">
+        <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
       </svg>
       </button>
-    <% else %>
-      <button title="Mark as returned" class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id%>"  data-user_id="<%= loan.user %>">
-      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-check2-circle" viewBox="0 0 16 16">
-        <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
-        <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
-      </svg>
-      </button>
-    <% end %>
+      <div id="myModal" class="modal" data-modal-target="review">
+        <div class="modal-content">
+          <span class="close" data-action='click->modal#close'>&times;</span>
+          <%= render '/shared/new_review', loan: loan %>
+        </div>
+      </div>
+      <% unless params[:controller] == 'users' && params[:action] == 'show'%>
+        <%= link_to user_path(loan.user), class: 'return-btn' do %>
+          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-chat-right-heart" viewBox="0 0 16 16">
+            <path d="M2 1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h9.586a2 2 0 0 1 1.414.586l2 2V2a1 1 0 0 0-1-1H2Zm12-1a2 2 0 0 1 2 2v12.793a.5.5 0 0 1-.854.353l-2.853-2.853a1 1 0 0 0-.707-.293H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12Z"/>
+            <path d="M8 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"/>
+          </svg>
+        <% end %>
+      <% end %>
+      <% if loan.status == 'pending' %>
+        <button title="Accept loan" class='return-btn' data-modal-target='accept' data-action="click->modal#confirm" data-id= "<%= loan.id %>" data-user_id="<%= loan.user %>">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-question-diamond" viewBox="0 0 16 16">
+          <path d="M6.95.435c.58-.58 1.52-.58 2.1 0l6.515 6.516c.58.58.58 1.519 0 2.098L9.05 15.565c-.58.58-1.519.58-2.098 0L.435 9.05a1.482 1.482 0 0 1 0-2.098L6.95.435zm1.4.7a.495.495 0 0 0-.7 0L1.134 7.65a.495.495 0 0 0 0 .7l6.516 6.516a.495.495 0 0 0 .7 0l6.516-6.516a.495.495 0 0 0 0-.7L8.35 1.134z"/>
+          <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
+        </svg>
+        </button>
+      <% else %>
+        <button title="Mark as returned" class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id%>"  data-user_id="<%= loan.user %>">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="white" class="bi bi-check2-circle" viewBox="0 0 16 16">
+          <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
+          <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
+        </svg>
+        </button>
+      <% end %>
+    </div>
   </div>
-</div>
