--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -34,7 +34,8 @@
   margin-top: 10px;
   padding: 5px;
   margin: 3px;
-  border-radius: 4px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   height: auto;
 }
 
