added meta tags for google and facebook

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <title>Good Terms | Because sharing is caring</title>
+    <meta name="description" content="Good Terms if the definitive website for keeping track of all your lent and borrowed goods. We make sure you stay on good terms with your friends!">
+
+    <meta property="og:title" content="Because sharing is caring">
+    <meta property="og:image" content="../assets/images/home-fb.jpg">
+    <meta property="og:description" content="Good Terms if the definitive website for keeping track of all your lent and borrowed goods. We make sure you stay on good terms with your friends!">
+    <meta property="og:site_name" content="Good Terms"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
