working on footer

--- a/app/assets/stylesheets/components/_mapbox.scss
+++ b/app/assets/stylesheets/components/_mapbox.scss
@@ -1,7 +1,7 @@
 .map {
   height: 100vh;
-  border-top: solid;
-  border-color: grey;
+  // border-top: solid;
+  // border-color: grey;
 }
 
 .mapboxgl-popup {
