--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -91,7 +91,8 @@ html {
 }
 
 #friends {
-  background: linear-gradient(13deg, rgba(82,182,154,0.7) 50%, rgba(255,255,255,1) 50%);
+  background: linear-gradient(13deg, rgba(255,255,255,0) 0%, rgba(82,182,154,1) 50%, rgba(255,255,255,1) 50%);
+
 }
 
 #map {
