--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
   </head>
 
   <body data-spy="scroll" data-target="#myScrollspy" class="">
+  <section class="margin-400">
    <div class="mid-container">
      <%= render 'shared/navbar'%>
 
@@ -26,5 +27,7 @@
       <%= yield %>
       <%= render 'shared/flashes' %>
    </div>
+  </section>
+   <%= render 'shared/footer'%>
   </body>
 </html>
