--- a/app/views/loans/new_borrow.html.erb
+++ b/app/views/loans/new_borrow.html.erb
@@ -1,16 +1,15 @@
 
 <div class="form-container">
-<h2>Tell us more about your item !</h2>
+<h2>What are you borrowing?</h2>
   <%= simple_form_for(@loan, as: :loan, method: :post, url: loans_borrow_path) do |f| %>
       <%= simple_fields_for :item do |i| %>
-        <%= i.input :item_name %>
-        <%= i.input :description %>
-        <%= i.input :user_id, collection: User.where.not(id: current_user), label: "Lender", :label_method => :full_name, value_method: :id, include_blank: false %>
+        <%= i.input :item_name, label: "Borrowed item" %>
+        <%= i.input :description, label: "Tell us more about that borrowed item" %>
+        <%= i.input :user_id, collection: User.where.not(id: current_user), label: "Who's the lender?", :label_method => :full_name, value_method: :id, include_blank: false %>
       <% end %>
       <%= f.input :photo, as: :file %>
-      <%= f.input :loan_date %>
-      <%= f.input :return_date %>
-      <%= f.submit "Let me borrow this!", class: "btn submit-btns" %>
+      <%= f.input :return_date, label: "When is it due?" %>
+      <%= f.submit "Borrow this!", class: "btn submit-btns" %>
   <% end %>
 
 </div>
