All problems solved. good to rock

--- a/app/views/loans/new_borrow.html.erb
+++ b/app/views/loans/new_borrow.html.erb
@@ -9,7 +9,7 @@
       <% end %>
       <%= f.input :photo, as: :file %>
       <%= f.input :return_date, label: "When is it due?" %>
-      <%= f.submit "Borrow this!", class: "btn submit-btns" %>
+      <%= f.submit "Borrow this!", class: "btn borrow-btns p-3" %>
   <% end %>
 
 </div>
