--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -11,7 +11,7 @@
 
 .borrow-btns:hover {
   color: rgba($color: #000000, $alpha: 0.8)!important;
-  background-color: transparent;
+  background-color: rgba($color: $borrowing, $alpha: 0.95);
   // background-color: rgba($color: #ffffff, $alpha: 0.7)
 }
 
@@ -39,7 +39,7 @@
 
 .lend-btns:hover {
   color: rgba($color: #000000, $alpha: 0.8)!important;
-  background-color: rgba($color: white, $alpha: 0.1);
+  background-color: rgba($color: $lending, $alpha: 0.95);
   // background-color: rgba($color: #ffffff, $alpha: 0.9)!important;
 }
 
@@ -63,7 +63,7 @@
 }
 
 .lend-active:hover {
-  background-color: rgba($color: white, $alpha: 0.8);
+  background-color: rgba($color: $lending, $alpha: 0.8);
   border: 1px rgba(0, 0, 0, 1) solid;
   border-radius: 61px;
   color: rgb(0, 0, 0);
@@ -73,7 +73,7 @@
 }
 
 .borrow-active:hover {
-  background-color: rgba($color: white, $alpha: 0.8);
+  background-color: rgba($color: $borrowing, $alpha: 0.8);
   border: 1px rgba(0, 0, 0, 1) solid;
   border-radius: 61px;
   color: rgb(0, 0, 0);
