--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -10,7 +10,7 @@
       <%# <%= f.association :user, label: "Borrower", label_method: :first_name, value_method: :id, include_blank: false %>
       <%= f.input :user_id, collection: User.where.not(id: current_user), label: "Who's the borrower?", :label_method => :full_name, value_method: :id, include_blank: false %>
       <%= f.input :return_date, label: "When is it due?" %>
-      <%= f.submit "Lend this!", class: "btn submit-btns" %>
+      <%= f.submit "Lend this!", class: "btn lend-btns p-3" %>
   <% end %>
 
 </div>
