--- a/app/views/shared/_card_lending.html.erb
+++ b/app/views/shared/_card_lending.html.erb
@@ -39,7 +39,7 @@
         </button>
       <% else %>
         <button title="Mark as returned" class='return-btn' data-action="click->modal#alert" data-id= "<%= loan.id%>"  data-user_id="<%= loan.user %>">
-        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#06d6a0" class="bi bi-check2-circle" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#a1ff0a" class="bi bi-check2-circle" viewBox="0 0 16 16">
           <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
           <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
         </svg>
