--- a/app/views/shared/_card_lending.html.erb
+++ b/app/views/shared/_card_lending.html.erb
@@ -1,6 +1,6 @@
   <div class="card-lending">
     <% if loan.return_date - Date.today < 5 && loan.return_date - Date.today > 0 %>
-      <div class="nearly-due"><p><%= "Nearly due!" %></p></div>
+      <div class="nearly-due"><p><%= "Nearly due" %></p></div>
     <% end %>
     <% if loan.return_date - Date.today < 0 %>
       <div class="overdue"><p><%= "Overdue!" %></p></div>
