--- a/app/views/loans/new_borrow.html.erb
+++ b/app/views/loans/new_borrow.html.erb
@@ -1,4 +1,3 @@
-
 <div class="form-container">
 <h2>What are you borrowing?</h2>
   <%= simple_form_for(@loan, as: :loan, method: :post, url: loans_borrow_path) do |f| %>
@@ -8,8 +7,7 @@
         <%= i.input :user_id, collection: User.where.not(id: current_user), label: "Who's the lender?", :label_method => :full_name, value_method: :id, include_blank: false %>
       <% end %>
       <%= f.input :photo, as: :file %>
-      <%= f.input :return_date, label: "When is it due?" %>
+      <div data-controller="flatpickr"><%= f.input :return_date, label: "When do you want it back?", as: :string, input_html: { class: "flatpickr-input" } %></div>
       <%= f.submit "Borrow this!", class: "btn borrow-btns p-3" %>
   <% end %>
-
 </div>
