tried but nothing works

--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -116,7 +116,15 @@
 }
 
 .accept-btn {
-  position: absolute;
-  top: 18px;
-  left: 80px;
+  // left: 90px;
+  // position: absolute;
+  border-radius: 25px;
+  margin: 3px;
+  padding: 8px 15px;
+  background-color: rgba($color: white, $alpha: 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.7);
+  z-index: 10;
+  &:hover {
+    transform: scale(1.1, 1.1)!important;
+  }
 }
